# Proof-Chain

./: README.md  para-2000-genesis  para-2000-wasm  para-3000-genesis  para-3000-wasm  rococo-local-parachain-2000-raw.json  rococo-local-parachain-3000-raw.json  rococo-local-parachain-plain.json
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/kitties/: Cargo.toml
pallets/kitties/src/: lib.rs  mock.rs  tests.rs  types.rs
pallets/proof/: Cargo.toml
pallets/proof/src/: lib.rs
pallets/xclient/: Cargo.toml
pallets/xclient/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
