[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2021'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-kitties'
readme = 'README.md'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '4.0.0-dev'


[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
[dev-dependencies]
serde = { version = "1.0.101" }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.16', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.16', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.16', default-features = false }

[dependencies]
codec = { package = 'parity-scale-codec', version = '2.0.0', features = ['derive'], default-features = false }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true}
frame-benchmarking = { git = "https://github.com/paritytech/substrate",branch = "polkadot-v0.9.16", default-features = false, optional = true}
frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.16', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.16', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.16', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.16', default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.16"}
pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.16', default-features = false}
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.16', default-features = false}
log = {default-features = false, version = "0.4.14"}

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    "scale-info/std",
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'sp-io/std',
    'sp-runtime/std',
    'pallet-balances/std',
    'pallet-randomness-collective-flip/std',
    'sp-std/std',
    "serde",
]
try-runtime = ['frame-support/try-runtime']