[package]
name = 'pallet-xclient'
authors = ['Anonymous']
description = 'FRAME pallet template for defining custom runtime logic.'
version = '4.0.0-dev'
license = 'Unlicense'
homepage = 'https://substrate.dev'
repository = 'https://github.com/paritytech/substrate/'
edition = '2021'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = 'parity-scale-codec', version = '2.0.0', features = ['derive'], default-features = false }
scale-info = { version = '1.0', default-features = false, features = ['derive'] }
sp-std = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.16', default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.16', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.16', default-features = false }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false , branch = "release-v0.9.16" }
cumulus-primitives-core = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.16", default-features = false }

[dev-dependencies]
serde = { version = "1.0.101" }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.16', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.16', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.16', default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
    'scale-info/std',
    "sp-std/std",
    'frame-support/std',
    'frame-system/std',
    "xcm/std",
    "cumulus-primitives-core/std",
]
